opam-version: "1.3.1"
name: "camelat"
version: "0.1"
maintainer: "Fabian Pijcke <fabian@pijcke.net>"
author: "Fabian Pijcke <fabian@pijcke.net>"
homepage: "https://github.com/shepard8/camelat"
bug-reports: "https://github.com/shepard8/camelat/issues"
dev-repo: "git+https://github.com/shepard8/camelat.git"
license: "LGPL with OCaml linking exception"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs ]
]
depends: [
  "jbuilder" {build}
]
depopts: [
  "eliom" {>= "6.2"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "Parsing LaTeX-like documents with OCaml."

